fix alignment

--- a/src/app.module.css
+++ b/src/app.module.css
@@ -18,6 +18,7 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	align-content: center;
 	color: var(--color-text);
 	height: 100dvh;
 }
